# RiDDLe

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
cmake/: RiDDLe-config.cmake.in
examples/blocks/: blocks_01.rddl  blocks_02.rddl  blocks_03.rddl  blocks_domain.rddl
examples/core/: example_04.rddl  example_09.rddl  example_10.rddl  example_11.rddl  example_12.rddl  example_13.rddl
examples/goac/: goac_domain.rddl
examples/lm/: README.md  domain.rddl  lm_00.rddl  lm_01.rddl  lm_02.rddl
examples/logistics/: README.md  logistics_domain.rddl  logistics_problem_2.rddl
examples/optimization/: README.md  physical_exercises_01.rddl  physical_exercises_05.rddl  physical_exercises_10.rddl  physical_exercises_15.rddl  physical_exercises_20.rddl  physical_exercises_25.rddl  physical_exercises_30.rddl  physical_exercises_35.rddl  physical_exercises_40.rddl  physical_exercises_45.rddl  physical_exercises_50.rddl  physical_exercises_55.rddl  physical_exercises_60.rddl  physical_exercises_70.rddl  physical_exercises_80.rddl  physical_exercises_constr_02.rddl  physical_exercises_constr_03.rddl  physical_exercises_constr_04.rddl  physical_exercises_constr_05.rddl  physical_exercises_domain.rddl  physical_exercises_free_01.rddl  physical_exercises_free_05.rddl  physical_exercises_free_10.rddl  physical_exercises_free_15.rddl  physical_exercises_free_20.rddl  physical_exercises_free_25.rddl  physical_exercises_free_30.rddl  physical_exercises_free_35.rddl  physical_exercises_free_40.rddl  physical_exercises_free_45.rddl  physical_exercises_free_50.rddl  physical_exercises_free_55.rddl  physical_exercises_free_60.rddl  physical_exercises_free_70.rddl  physical_exercises_free_80.rddl
examples/telepresence/: telepresence_01.rddl  telepresence_02.rddl  telepresence_03.rddl
examples/types/cr/: cr_0.rddl
examples/types/rr/: rr_2.rddl  rr_3.rddl
examples/types/sv/: sv_0.rddl  sv_1.rddl  sv_2.rddl  sv_3.rddl
examples/urban_intelligence/: urban_intelligence_0.rddl  urban_intelligence_01_03.rddl  urban_intelligence_01_06.rddl  urban_intelligence_01_09.rddl  urban_intelligence_01_12.rddl  urban_intelligence_01_15.rddl  urban_intelligence_01_18.rddl  urban_intelligence_01_21.rddl  urban_intelligence_01_24.rddl  urban_intelligence_01_27.rddl  urban_intelligence_01_30.rddl  urban_intelligence_02_03.rddl  urban_intelligence_02_06.rddl  urban_intelligence_02_09.rddl  urban_intelligence_02_12.rddl  urban_intelligence_02_15.rddl  urban_intelligence_02_18.rddl  urban_intelligence_02_21.rddl  urban_intelligence_02_24.rddl  urban_intelligence_02_27.rddl  urban_intelligence_02_30.rddl  urban_intelligence_03_03.rddl  urban_intelligence_03_06.rddl  urban_intelligence_03_09.rddl  urban_intelligence_03_12.rddl  urban_intelligence_03_15.rddl  urban_intelligence_03_18.rddl  urban_intelligence_03_21.rddl  urban_intelligence_03_24.rddl  urban_intelligence_03_27.rddl  urban_intelligence_03_30.rddl  urban_intelligence_domain.rddl
examples/urban_intelligence/public_administration/: purchases_01.rddl  purchases_domain.rddl
examples/urban_intelligence/urban_ontology/: urban_ontology_01.rddl  urban_ontology_02.rddl
include/: README.md  compilation_unit.hpp  conjunction.h  conjunction.hpp  constructor.h  constructor.hpp  core.h  core.hpp  core_listener.h  declaration.hpp  env.h  env.hpp  exceptions.hpp  expression.hpp  field.h  field.hpp  flaw.hpp  item.h  item.hpp  items.hpp  itm.hpp  lexer.h  lexer.hpp  method.h  method.hpp  parser.h  parser.hpp  resolver.hpp  riddle_lexer.h  riddle_parser.h  scope.h  scope.hpp  statement.hpp  term.hpp  test_lexer.hpp  timeline.hpp  type.h  type.hpp  types.hpp
src/: RiDDLeConfig.cmake.in  compilation_unit.cpp  conjunction.cpp  constructor.cpp  core.cpp  declaration.cpp  env.cpp  expression.cpp  flaw.cpp  item.cpp  items.cpp  itm.cpp  lexer.cpp  method.cpp  parser.cpp  resolver.cpp  riddle_lexer.cpp  riddle_parser.cpp  scope.cpp  statement.cpp  term.cpp  test_lexer.cpp  timeline.cpp  type.cpp  types.cpp
tests/: CMakeLists.txt  test_lexer.cpp  test_parser.cpp  test_riddle.cpp
