add_executable(riddle_lexer_tests test_lexer.cpp)
target_link_libraries(riddle_lexer_tests PRIVATE RiDDLe)
if(MSVC)
    target_compile_options(riddle_lexer_tests PRIVATE /W4)
else()
    target_compile_options(riddle_lexer_tests PRIVATE -Wall -Wextra -Wpedantic -fsanitize=undefined)
    target_link_options(riddle_lexer_tests PRIVATE -fsanitize=undefined)
    if (ENABLE_COVERAGE)
        if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
            target_compile_options(riddle_lexer_tests PRIVATE --coverage)
            target_link_libraries(riddle_lexer_tests PUBLIC gcov)
        endif()
    endif()
endif()

add_executable(riddle_parser_tests test_parser.cpp)
target_link_libraries(riddle_parser_tests PRIVATE RiDDLe)
if(MSVC)
    target_compile_options(riddle_parser_tests PRIVATE /W4)
else()
    target_compile_options(riddle_parser_tests PRIVATE -Wall -Wextra -Wpedantic -fsanitize=undefined)
    target_link_options(riddle_parser_tests PRIVATE -fsanitize=undefined)
    if (ENABLE_COVERAGE)
        if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
            target_compile_options(riddle_parser_tests PRIVATE --coverage)
            target_link_libraries(riddle_parser_tests PUBLIC gcov)
        endif()
    endif()
endif()

add_test(NAME riddle_lexer_tests COMMAND riddle_lexer_tests)
add_test(NAME riddle_parser_tests COMMAND riddle_parser_tests)